@startuml
hide methods
skinparam classAttributeIconSize 0
left to right direction

class "Center Coordinator" {
}

class "Vaccination Center" {
  -name
  -address
  -phone number
  -email address
  -fax number
  -website address
  -Open and closing hours
  -Slot duration
  -maximum number of vaccines per slot
  -type
  -designation
  -waiting list
  -recovery room
}

class "PerformanceRecords"{
-snsUserNumber
-vaccineName
-doseStep
-lotNumber
-scheduledDate
-scheduledTimeHour
-arrivalDate
-arrivalTimeHour
-nurseAdministrationDate
-nurseAdministrationTimeHour
-leavingDate
-leavingTimeHour
}



class Vaccine{
-**name**
-lotNumber
-**id**
-**brand**
-**vaccineType**
-**numberDoses**
-**vaccineDosage**
}

class "SNS User" {
 -name
 -email
 -phone number
 -citizen card number
 -SNS user number
 -address
 -birthdate
 -arrivalTime
 -gender
}

class Company {
  -Designation
}

class "Vaccine Type"{
-designation
}

class "VaccinationRecords"{
-vaccineName
-doseStep
-vaccineLotNumber
-administrationDate
-administrationTimeHour
}

class "Health Records" {
-health condition
-adverse reactions
}

"Center Coordinator" "1" -- "*" "Vaccination Center" : monitors >

Vaccine "*" -- "1" "Vaccine Type" : is part of >
Company "1" -- "*" "SNS User" : Knows >
Company "1" -- "*" "Vaccination Center" : manages >
Company "1" -- "*" "Vaccine" : Knows >
Company "1" -- "*" "Vaccine Type" : defines >
"PerformanceRecords" "*" --"1" "Vaccination Center" : is part of >

"SNS User" "1" -- "*" "Health Records" : has a >
"VaccinationRecords" "*" -- "1" "Health Records" : is part of >


@enduml